# startup-tray-manager

./: .gitignore  CHANGELOG.md  README.md  electron.vite.config.ts  package-lock.json  package.json  tsconfig.json  vite.config.ts
scripts/: dist-win.mjs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs  settings.rs  startup.rs
src/main/: i18n.ts  index.ts  settings.ts  startup.ts
src/preload/: index.ts
src/renderer/: index.html
src/renderer/src/: App.vue  env.d.ts  main.ts  startup-manager.ts  styles.css
src/shared/: types.ts
