[package]
name = "startup-tray-manager"
version = "1.0.0"
description = "Windows startup apps tray manager built with Tauri and Vue."
authors = ["zyz"]
edition = "2021"

[lib]
name = "startup_tray_manager_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
base64 = "0.22"
log = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sys-locale = "0.3"
tauri = { version = "2.10.3", features = ["tray-icon", "image-png"] }
tauri-plugin-log = "2"
tauri-plugin-single-instance = "2"
